Sort result tree alphabetically, GitHub issue #134